Fix problem with remove btn on safari

--- a/app/sass/blocks/dashboard/_account-dashboard.sass
+++ b/app/sass/blocks/dashboard/_account-dashboard.sass
@@ -594,6 +594,11 @@
 .btn-rotate
   transform: rotate(180deg)
 
+.basket-line .remove-btn
+    width: 26px
+    height: 26px
+    left: -30px
+
 .show-more-btn
   display: none
 
